# Habi-Prueba-T-cnica

./: README.md  pyproject.toml  requirements.txt
migrations/: CREATE_TABLES.sql
resources/json/: filters.json  filters_validator_schema.json
resources/sql/: FIND_PROPERTIES.sql
src/app/: __init__.py  app.py  main.py
src/app/conf/: __init__.py  connection.py  constraints.py
src/app/controller/: __init__.py  controller.py
src/app/handler/: __init__.py  handler.py
src/app/model/: __init__.py  model.py
src/app/utils/: __init__.py  logger.py  utils.py
src/list_organizer/: __init__.py  app.py  main.py
